fixed edit profile button padding covering whole profile box.

--- a/resdex/src/index.css
+++ b/resdex/src/index.css
@@ -713,3 +713,13 @@ border-top: 1px solid white;
     transform: translateY(0);
   }
 }
+
+
+
+label {
+  pointer-events: none;
+}
+
+button {
+  pointer-events: all;
+}
